examples/datalog/12_errors/24_missing_period_error.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_missing_period
Knowledge graph 'test_missing_period' created.
Switched to knowledge graph: test_missing_period
> .kg use test_missing_period
Switched to knowledge graph: test_missing_period
> +edge(1, 2) +edge(2, 3).
Script error: Parse error: Invalid term: '2) +edge(2, 3'
